v0.7.2

* [BGBUILD-79] Allow to use BoxGrinder Build as a library

v0.7.1

* [BGBUILD-124] Guestfs fails while mounting multiple partitions with '_' prefix
* [BGBUILD-123] Remove RPM database recreation code

v0.7.0

* [BGBUILD-119] Fix SElinux issues on EC2 appliances
* [BGBUILD-118] Enable SElinux in guestfs
* [BGBUILD-80] VMware .tgz Bundle Should Expand Into Subdirectory, Not Current Directory
* [BGBUILD-113] Allow to specify supported file formats for operating system plugin
* [BGBUILD-73] Add support for kickstart files

v0.6.5

* Release bump required for plugins

v0.6.4

* [BGBUILD-98] Use hashery gem
* [BGBUILD-99] Timeout exception is not catched on non-EC2 platfrom in GuestFSHelper
* [BGBUILD-92] Enable --trace switch by default
* [BGBUILD-91] Log exceptions to log file

v0.6.3

* [BGBUILD-94] Check if set_network call is avaialbe in libguestfs

v0.6.2

* [BGBUILD-84] Don't use in libguestfs qemu-kvm where hardware accleration isn't available

v0.6.1

* [BGBUILD-81] post command execution w/ setarch breaks commands which are scripts

v0.6.0

* [BGBUILD-52] Wrong post section inheritance
* [BGBUILD-46] Allow building 32 bit image  s on 64 bit arch

v0.5.1

* [BGBUILD-40] Fix for running Augeas in Libguestfs

v0.5.0

* Plugins externalized from BoxGrinder Build

v0.4.0