@@ -1,6 +1,7 @@
 v0.7.2
 
 * [BGBUILD-79] Allow to use BoxGrinder Build as a library
+* [BGBUILD-127] Use appliance definition object instead of a file when using BG as a library
 
 v0.7.1
 
